plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.15'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.letspeppol'
version = '0.0.1-SNAPSHOT'
description = 'Know Your Customer'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.17'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // 0.30.3 is the last webauthn4j release on Jackson 2; upgrade on spring boot 4.1
    implementation 'com.webauthn4j:webauthn4j-core:0.30.3.RELEASE'
    implementation 'dev.samstevens.totp:totp:1.7.1'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.81.1'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.81.1'
	implementation 'org.bouncycastle:bcutil-jdk18on:1.81.1'
    implementation 'com.itextpdf:bouncy-castle-adapter:9.3.0'
    implementation 'com.itextpdf:itext-core:9.3.0'
    implementation 'org.jsoup:jsoup:1.18.1'
    implementation 'org.postgresql:postgresql:42.7.8'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.apache.pdfbox:pdfbox:3.0.2'
    implementation 'org.apache.pdfbox:fontbox:3.0.2'
    implementation 'com.github.loki4j:loki-logback-appender:2.0.1'
    // Maintained drop-in fork of the abandoned com.jcraft:jsch (CVE-2023-48795 / Terrapin).
    // Same com.jcraft.jsch package API.
    implementation 'com.github.mwiede:jsch:0.2.18'
	compileOnly 'org.projectlombok:lombok:1.18.40'
	annotationProcessor 'org.projectlombok:lombok:1.18.40'

    runtimeOnly 'com.h2database:h2'

	testCompileOnly 'org.projectlombok:lombok:1.18.40'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.40'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:testcontainers-postgresql:2.0.3'
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.3.2'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootJar') {
    archiveFileName = 'kyc.jar'
}
